@@ -17,7 +17,6 @@ import lombok.experimental.UtilityClass;
 import org.apache.commons.lang3.StringUtils;
 import org.apache.http.Header;
 import org.apache.http.HttpEntity;
-import org.apache.http.NameValuePair;
 import org.apache.http.client.entity.UrlEncodedFormEntity;
 import org.apache.http.entity.ContentType;
 import org.apache.http.entity.StringEntity;
@@ -168,9 +167,9 @@ public final class HttpUtil {
             String params = JacksonMapperUtil.writeValueAsString(bodyParamMap);
             return newStringEntity(params, contentType);
         }
-        List<NameValuePair> paramList = bodyParamMap.entrySet().stream()
+        List<BasicNameValuePair> paramList = bodyParamMap.entrySet().stream()
                 .map(e -> new BasicNameValuePair(e.getKey(), e.getValue()))
-                .collect(Collectors.toList());
+                .toList();
         return new UrlEncodedFormEntity(paramList, StandardCharsets.UTF_8);
     }
 
@@ -201,8 +200,7 @@ public final class HttpUtil {
 
     public boolean checkIfContentTypeIsJson(final Header contentTypeHeader) {
         if (nonNull(contentTypeHeader)) {
-            return contentTypeHeader.getValue().equals(MediaType.APPLICATION_JSON_VALUE)
-                    || contentTypeHeader.getValue().equals(MediaType.APPLICATION_JSON_UTF8_VALUE);
+            return contentTypeHeader.getValue().contains(MediaType.APPLICATION_JSON_VALUE);
         }
         return false;
     }
